--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pythonide
-description: A new Flutter project.
+description: Python IDE Mobile - IDE for Python 3.
 version: 1.0.0+1
 
 environment:
@@ -12,15 +12,15 @@ dependencies:
   crypto: ^3.0.0
   clipboard: ^0.1.3
   device_info: ^2.0.2
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
   file_picker: ^3.0.2+2
   flutter_downloader: ^1.6.1
   flutter_highlight: ^0.7.0
-  flutter_mobx: ^2.0.0
   flutter_json_widget: ^1.0.2
   flutter_quill: ^1.3.3
   flutter_svg: 0.22.0 
   http: ^0.13.0
-  mobx: ^2.0.1
   get: ^4.1.4
   google_fonts: ^2.1.0
   in_app_purchase: ^0.5.2
@@ -28,27 +28,15 @@ dependencies:
   in_app_update: ^2.0.0
   outline_material_icons: 0.1.1
   equatable: ^2.0.2
-  time_ago_provider: ^4.1.0
   package_info: ^2.0.2
   path_provider: ^2.0.2
   purchases_flutter: ^3.2.2
   random_string: 2.1.0
-  share: ^2.0.4
   url_launcher: ^6.0.6
-  web_socket_channel: 2.1.0
-  
-  #git dependencies
-  flutter_absolute_path: 
-    # path: ../flutter_absolute_path
-    git:
-      url: https://github.com/canewsin/flutter_absolute_path.git
-      ref: android-v2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.4
-  mobx_codegen: ^2.0.1+3
 
 flutter:
   uses-material-design: true
